# hll-x-js-runtime

./: README-en.md  README.md  build.gradle  settings.gradle  upload.sh
app/: build.gradle
app/src/androidTest/java/com/paladin/engine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/paladin/engine/: App.kt  MainActivity.java
app/src/main/res/layout/: activity_evaluate_void_script.xml  activity_example.xml  activity_jsexecutor_test.xml  activity_main.xml  activity_qjsexecutor_test.xml  activity_v8_executor_test.xml  content_example.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/paladin/engine/: ExampleUnitTest.java
common/: build.gradle  consumer-rules.pro  nexus.properties
common/src/androidTest/java/com/paladin/common/: ExampleInstrumentedTest.java
common/src/main/: AndroidManifest.xml
common/src/main/cpp/: utils.cpp
common/src/main/cpp/include/: constant.h  java_function.h  js_executor.h  log.h  utils.h
common/src/test/java/com/paladin/common/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jsc/: build.gradle  nexus.properties
jsc/src/androidTest/java/com/paladin/jsc/: ExampleInstrumentedTest.java
jsc/src/main/: AndroidManifest.xml
jsc/src/main/cpp/: CMakeLists.txt  jsc_executor.cpp  jsc_utils.cpp
jsc/src/main/cpp/include/: jsc_executor.h  jsc_utils.h
jsc/src/main/cpp/include/JavaScriptCore/: APICast.h  JSBasePrivate.h  JSCTestRunnerUtils.h  JSClassRef.h  JSContext.h  JSContextInternal.h  JSContextPrivate.h  JSContextRef.h  JSContextRefInspectorSupport.h  JSContextRefPrivate.h  JSExport.h  JSHeapFinalizerPrivate.h  JSManagedValue.h  JSManagedValueInternal.h  JSMarkingConstraintPrivate.h  JSObjectRef.h  JSObjectRefPrivate.h  JSRemoteInspector.h  JSRetainPtr.h  JSScriptRefPrivate.h  JSStringRef.h  JSStringRefPrivate.h  JSTypedArray.h  JSValueInternal.h  JSValueRef.h  JSVirtualMachine.h  JSVirtualMachineInternal.h  JSVirtualMachinePrivate.h  JSWeakObjectMapRefPrivate.h  JSWeakPrivate.h  JSWrapperMap.h  JavaScript.h  JavaScriptCore.h  ObjCCallbackFunction.h
jsc/src/main/cpp/jni/: com_paladin_jsruntime_jsc_JSCExecutor.cpp  com_paladin_jsruntime_jsc_JSCExecutor.h
jsc/src/main/cpp/test/: Test.cpp
jsc/src/test/java/com/paladin/jsc/: ExampleUnitTest.java
quickjs/: build.gradle  nexus.properties
quickjs/src/androidTest/java/com/paladin/quickjs/: ExampleInstrumentedTest.java
quickjs/src/main/: AndroidManifest.xml
quickjs/src/main/cpp/: CMakeLists.txt  qjs_executor.cpp  qjs_utils.cpp
quickjs/src/main/cpp/include/: qjs_executor.h  qjs_utils.h
quickjs/src/main/cpp/jni/: com_paladin_jsruntime_qjs_QJSExecutor.cpp  com_paladin_jsruntime_qjs_QJSExecutor.h
v8/: build.gradle  nexus.properties
v8/src/main/: AndroidManifest.xml
v8/src/main/cpp/: CMakeLists.txt  InspectorDelegate.cpp  V8Inspector.cpp  V8InspectorChannelImpl.cpp  V8InspectorClientImpl.cpp  v8_executor.cpp  v8_utils.cpp
v8/src/main/cpp/include/: InspectorDelegate.h  JSBigString.h  MethodDescriptor.h  V8Inspector.h  V8InspectorChannelImpl.h  V8InspectorClientImpl.h  V8Runtime.h  v8_executor.h  v8_utils.h
v8/src/main/cpp/jni/: com_paladin_jsruntime_v8_V8Executor.cpp  com_paladin_jsruntime_v8_V8Executor.h
(+48 files in other folders)
